79) kernel: sg: fix dxferp in from_to case.<br>
80) kernel: mm/mlock: prepare params outside critical region.<br>
81) kernel: mm: reorder can_do_mlock to fix audit denial.<br>
82) kernel: mm/msync.c: sync only the requested range in msync().<br>
83) kernel: mm/msync: fix incorrect fstart calculation.<br>
84) kernel: mm/mempool: add @gfp_mask to mempool_create_node().<br>
85) kernel: mm/mempool: convert kmalloc_node(...GFP_ZERO...) to kzalloc_node(...).<br>
86) kernel: mips: make flush_thread and exit_thread always inline.<br>
87) kernel: mips: lib: mark intrinsics notrace.<br>
88) kernel: mips: fix accessing to per-cpu data when flushing the cache.<br>
89) kernel: mips: fix forgotten preempt_enable() when CPU has inclusive pcaches.<br>
90) kernel: usb: xhci: fix wild pointers in xhci_mem_cleanup.<br>
91) kernel: usb: serial: option: add more ZTE device ids.<br>
92) kernel: usb: serial: option: add support for Cinterion PH8 and AHxx.<br>
93) kernel: usb: net: cdc_ncm: update datagram size after changing mtu.<br>
94) kernel: usb: core: fix crash on unlink urb.<br>
95) kernel: usb: retry reset if a device times out.<br>
96) kernel: net: do not block BH while processing socket backlog.<br>
97) kernel: net: tcp: make tcp_sendmsg() aware of socket backlog.<br>
98) kernel: net: tcp: guarantee forward progress in tcp_sendmsg().<br>
99) kernel: net: ipv4: don't do expensive useless work during inetdev destroy.<br>
100) kernel: net: bridge: fix incorrect re-injection of STP packets.<br>
101) kernel: net: ethtool: use kcalloc instead of kmalloc for ethtool_get_strings.<br>
102) kernel: net: netfilter: x_tables: don't move to non-existent next rule (CVE-2016-4997).<br>
103) kernel: net: ipmr/ip6mr: Initialize the last assert time of mfc entries.<br>
<br>
<br>
<b>4.5.x</b><br>
1) kernel: mips: fix possible corruption of cache mode by mprotect.<br>
2) kernel: net: tcp: increase size at which tcp_bound_to_half_wnd bounds to > TCP_MSS_DEFAULT.<br>
<br>
<br>
<br>