@@ -2193,7 +2193,8 @@
 <br>
 <b>4.5.x</b><br>
 1) kernel: mips: fix possible corruption of cache mode by mprotect.<br>
-2) kernel: net: tcp: increase size at which tcp_bound_to_half_wnd bounds to > TCP_MSS_DEFAULT.<br>
+2) kernel: mips: remove cpu_has_safe_index_cacheops.<br>
+3) kernel: net: tcp: increase size at which tcp_bound_to_half_wnd bounds to > TCP_MSS_DEFAULT.<br>
 <br>
 <br>
 <br>
